WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
156801
Anchor element 'ping' property should only apply to http/https destinations
https://bugs.webkit.org/show_bug.cgi?id=156801
Summary
Anchor element 'ping' property should only apply to http/https destinations
Brent Fulgham
Reported
2016-04-20 11:39:00 PDT
The HTML5 specification <
https://developers.whatwg.org/links.html#ping
> indicates: "The ping attribute, if present, gives the URLs of the resources that are interested in being notified if the user follows the hyperlink. The value must be a set of space-separated tokens, each of which must be a valid non-empty URL." Although the specification indicates that it must be a "valid non-empty URL", it doesn't really make sense to support anything besides http/https destinations. We should tighten up WebKit to ignore other protocols.
Attachments
Patch
(1.42 KB, patch)
2016-04-20 17:05 PDT
,
Brent Fulgham
no flags
Details
Formatted Diff
Diff
Patch
(1.75 KB, patch)
2016-04-21 11:08 PDT
,
Brent Fulgham
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2016-04-20 11:40:06 PDT
<
rdar://problem/25834419
>
Brent Fulgham
Comment 2
2016-04-20 17:05:11 PDT
Created
attachment 276870
[details]
Patch
Brent Fulgham
Comment 3
2016-04-21 11:08:26 PDT
Created
attachment 276938
[details]
Patch
Chris Dumez
Comment 4
2016-04-21 11:20:59 PDT
Comment on
attachment 276938
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=276938&action=review
> Source/WebCore/ChangeLog:14 > + Tested by http/tests/navigation/ping-attribute tests.
Then why weren't this rebaselined?
Brent Fulgham
Comment 5
2016-04-22 09:40:39 PDT
(In reply to
comment #4
)
> Comment on
attachment 276938
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=276938&action=review
> > > Source/WebCore/ChangeLog:14 > > + Tested by http/tests/navigation/ping-attribute tests. > > Then why weren't this rebaselined?
It just confirms expected behavior still works. WebKitTestRunner doesn't have a way to test that local files have not been read.
Chris Dumez
Comment 6
2016-04-22 10:21:28 PDT
Comment on
attachment 276938
[details]
Patch r=me
Brent Fulgham
Comment 7
2016-04-22 13:57:02 PDT
Comment on
attachment 276938
[details]
Patch Clearing flags on attachment: 276938 Committed
r199900
: <
http://trac.webkit.org/changeset/199900
>
Brent Fulgham
Comment 8
2016-04-22 13:57:06 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug